Add breakpoints to variables page

--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -301,3 +301,15 @@ $escaping-characters: (
   (')', '%29'),
 );
 ```
+
+## Breakpoints
+
+```scss
+$breakpoints: (
+  xs: 32em,
+  sm: 48em,
+  md: 64em,
+  lg: 80em,
+  xl: 90em,
+  xxl: 110em
+);
