--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -62,8 +62,9 @@ You can access any setting with the [setting() helper function](/docs/sass/funct
 
 ```scss
 $settings:(
+  color-fallback: false, // Turn on/off the fallback color when using spruce.color() function
   hyphens:  true, // Turn on/off the hyphenation
-  color-fallback: false // Turn on/off the fallback color when using spruce.color() function
+  optimal-responsive-font-size: '2vw + 1rem' // Optimal size use at font-size() and responsive-font-size() function
 );
 ```
 
