--- a/src/docs/elements/buttons.mdx
+++ b/src/docs/elements/buttons.mdx
@@ -110,6 +110,25 @@ The `.btn` has `inline-flex` display with a `gap` value.
 </button>
 ```
 
+## Icon
+
+To make an only icon button use the `btn--icon` modifier class. If you create an icon button, use `aria-label` to add a caption.
+
+<Preview>
+  <div class="button-grid button-grid--stacked">
+    <button class="btn btn--secondary btn--icon" aria-label="Copy Text">
+      <Icon type="copy" className="btn__icon" />
+    </button>
+  </div>
+</Preview>
+
+```html
+<button class="btn btn--secondary btn--icon" aria-label="Copy Text">
+  <svg class="btn__icon">...</svg>
+  Read more
+</button>
+```
+
 ## Configurable Variables
 
 There are some defaults variables that you can configure to customize the button's look.
