Update button code example

--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -23,6 +23,7 @@ There are two types of variables: single one and map. All of them are overwritea
       new-background: hsl(0, 0%, 95%), // Expanded new color values for buttons.
       new-background-hover: hsl(0, 0%, 90%),
       new-foreground: hsl(0, 0%, 10%),
+      new-foreground-hover: hsl(0, 0%, 10%),
     )
   ),
   $font-size-base: 1.063rem,
