Add selection colors to variables

--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -105,6 +105,10 @@ $colors: map.deep-merge(
       code-foreground: $color-black,
       blockquote-border: $color-primary
     ),
+    selection: (
+      foreground: $color-white,
+      background: $color-primary
+    ),
     alert: (
       danger: hsl(2, 71%, 53%),
       info: hsl(202, 100%, 37%),
