--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -9,9 +9,7 @@ By minimalist, we mean that it contains only the bare minimum needed for a compl
 
 <Notification type="wrong" icon={false}>Spruce CSS is in beta until the 1.0 release. <strong>At this point, many things are missing, could, and will change.</strong> We plan to release the first major version in the next 3-6 months (until 2022 July).</Notification>
 
-<Notification type="info" icon={true}>Spruce UI will be a separate sister project of Spruce CSS, where you will find pre-built components.We plan to start to work on it at the end of this year (2022).</Notification>
-
-## What Spruce Wants to Be?
+## What Spruce CSS Wants to Be?
 
 - It wants to be a little bit better with each release.
 - It wants to be minimal and small, with just the necessities for any project.
@@ -20,23 +18,28 @@ By minimalist, we mean that it contains only the bare minimum needed for a compl
 - It wants to be semantic and follow accessibility best practices where possible.
 - It wants to do less (we will see if it actually happens).
 
-## What Spruce Doesn’t Want to Be?
+<Notification type="info" icon={true}>Spruce UI will be a separate sister project of Spruce CSS, where you will find pre-built components.We plan to start to work on it at the end of this year (2022).</Notification>
 
-- We don’t want to compete or compered with other CSS frameworks. We think almost all of them are great - we learn(t) a lot from them.
-- Although it has some design opinion, it is not something to help you design. The goal is to give you the correct patterns and a small system; the UI is your job.
-- Spruce is just a tool. It can help you, but alone it can’t make your code better. You have to do your homework.
+## What Doesn’t Spruce Wants to Be?
+
+- We don’t want to compete or compered with other CSS frameworks. We think almost all of them are great - we learn(t) a lot from them. Besides, it all has its weakness and greatness, too, like Spruce CSS.
+- Although it has some design opinion, it is not something to help you design (User Interfaces). The goal is to give you the correct patterns and a small system to help you create manageable projects in the long run; the UI is your job.
+- **Spruce CSS is just a tool. It can help you, and it will, but alone it can’t make your code better. You have to do your homework.**
 
 ## Why Make Another CSS Framework?
 
-As you may know, there are a great many CSS frameworks. Everybody can choose one that suits their work of style or project requirements well. So why make another one? It is certainly not because we can do it better but because we want to do it our way.
+As you may know, there are a great many CSS frameworks. Everybody can choose one that suits their work of style or project requirements. So why make another one? It is certainly not because we can do it better but because **we want to do it our way**.
 
-We are sure everybody uses a CSS system; it can be a complete framework or a set of custom utilities. Everyone uses some subset for the new projects as we do. But managing it is something that will be a burden after a time. So why not outsource it, make it better, and create a package?
+We are sure everybody uses a CSS system; it can be a complete framework or a set of custom utilities. Everyone uses some subset for the new projects as we do. But managing it is something that will be a burden after a time. So why not outsource it, make it better, create a package, and document it well?
 
 ## It Is Opinionated
-Each system is opinionated but on a different level; this is valid for Spruce too. We don’t want to vote for any particular solution (because there are always more than one), but we will show you what we think is the best right now (for us for sure). We don’t believe there is a good or bad solution, but we can learn from any of them.
+
+Each system is opinionated but on a different level; this is valid for Spruce too. We don’t want to vote for (strictly) any particular solution (because there are always more than one), but we will show you what we think is the best for us (and maybe for you too). We don’t believe there is a good or bad solution, but we can learn from any of them.
 
 ## We Left the Grid Out
-One deficit in Spruce CSS is the lack of a classical grid system. Because of the late CSS layout model developments like Flexbox and Grid, we think that it can be eliminated; this doesn’t mean that we won’t show you how to make layouts with ease, but we try to make it in a modernish way.
+
+One controversial decision we made with Spruce is to leave a classical grid system out. Because of the late CSS layout model developments like Flexbox and Grid, we think it can be eliminated; this doesn’t mean that we won’t show you how to make layouts with ease, but we try to make it the modern way.
 
 ## Color Purple
+
 Choosing a “brand” color is hard because all of them are taken. After we realized that all of our stuff uses blue, we made the boldest choice and picked purple. We swear we didn’t copy the color from Boostrap, unlike many other things. 😐
