Add order to frontmatter, start post navigation

--- a/src/docs/elements/tables.mdx
+++ b/src/docs/elements/tables.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Tables'
+order: 13
 ---
 
 <p class="lead">Spruce ships with some basic table styling targeted only with classes to opt-in.</p>
