--- a/src/docs/getting-started/appendix.mdx
+++ b/src/docs/getting-started/appendix.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Appendix'
+order: 8
 ---
 
 <p class="lead">In the appendix you can find some reference that inspired or gave any kind of input related to any aspects of Spruce</p>
