--- a/src/docs/getting-started/installation.mdx
+++ b/src/docs/getting-started/installation.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Installation'
+order: 2
 ---
 
 <p className="lead">Spruce CSS is built on Sass; to get the full potential, you should use with it. If you want, you can load the compiled CSS too, but you will lose many features.</p>
