--- a/src/docs/getting-started/internationalization.mdx
+++ b/src/docs/getting-started/internationalization.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Internationalization'
+order: 6
 ---
 
 <p class="lead">Internationalization (i18n) means preparing the code, design to handle different languages and writing modes.</p>
