--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Introduction'
 description: ''
+order: 1
 ---
 
 <p className="lead">Spruce is a Sass-based minimalistic CSS framework that helps us get the foundation right and manage multiple projects better.</p>
