--- a/src/docs/getting-started/sass.mdx
+++ b/src/docs/getting-started/sass.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Sass'
+order: 4
 ---
 
 <p className="lead">Spruce uses Sass to generate CSS code. Sass is a popular and mature CSS extension language that lets us write stylesheets more programmatically.</p>
