--- a/src/docs/getting-started/structure-and-code.mdx
+++ b/src/docs/getting-started/structure-and-code.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Structure and Code'
+order: 3
 ---
 
 <p class="lead">Spruce tries to be customizable and straightforward. On this page, you can find some core principles and the structure.</p>
