--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Variables'
+order: 9
 ---
 
 <p class="lead">Spruce comes with a bunch of Sass variables. It also uses CSS custom properties for colors and transitions.</p>
