--- a/src/docs/elements/buttons.mdx
+++ b/src/docs/elements/buttons.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Buttons'
+order: 14
 ---
 
 <p className="lead">Spruce comes with basic button variations like size, width, color, state and can also generate your custom color variants.</p>
