--- a/src/docs/elements/forms.mdx
+++ b/src/docs/elements/forms.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Forms'
+order: 15
 ---
 
 <p class="lead">Spruce comes with an overall (WIP) form support like styling the different types of inputs or validation.</p>
