--- a/src/docs/elements/typography.mdx
+++ b/src/docs/elements/typography.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Typography'
+order: 12
 ---
 
 <p class="lead">Typography is an essential part of any system. With Spruce, you get basic styles for the most related HTML elements.</p>
