--- a/src/docs/getting-started/accessibility.mdx
+++ b/src/docs/getting-started/accessibility.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Inclusivity and Accessibility'
+order: 5
 ---
 
 <p class="lead">Inclusivity and accessibility (A11Y) are some of the main concerns of Spruce. Our goal is to help you develop a little more accessible web-based projects through our code and the documentation, where we will try to show you small, related tips and guidence where it is possible.</p>
