Add "Who is Spruce For?" section

--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -27,6 +27,15 @@ By minimalist, we mean that it contains only the bare minimum needed for a compl
 - Although it has some design opinion, it is not something to help you design (User Interfaces). The goal is to give you the correct patterns and a small system to help you create manageable projects in the long run; the UI is your job.
 - **Spruce CSS is just a tool. It can help you, and it will, but alone it can’t make your code better. You have to do your homework.**
 
+## Who is Spruce For?
+
+Choosing a CSS framework is not an easy task. Let us help you with why you should select Spruce:
+
+- Spruce is a good choice if you prefer writing CSS instead of HTML. It uses just a few classic utility classes.
+- It is a relatively small framework with a smaller learning curve. The codebase is small, but it can add more to any project with the available mixins and functions.
+- You like Sass. We think it is great, but you have to know what you are doing.
+- It is themeable. You can create different themes using CSS custom properties like a dark one.
+
 ## Why Make Another CSS Framework?
 
 As you may know, there are a great many CSS frameworks. Everybody can choose one that suits their work of style or project requirements. So why make another one? It is certainly not because we can do it better but because **we want to do it our way**.
