Update Structure and Code page

--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -15,7 +15,7 @@ By minimalist, we mean that it contains only the bare minimum needed for a compl
 - It wants to be a little bit better with each release.
 - It wants to be minimal and small, with just the necessities for any project.
 - It wants to be modern. Defining modern is challenging in a constantly changing environment, but the essence here is to **follow the new things in CSS**.
-- It wants to separate the basic framework from a UI or component library. For UI, we plan to do a separate project named Spruce UI.
+- **It wants to separate the basic framework from a UI or component library.** For UI, we plan to do a separate project named Spruce UI.
 - It wants to be semantic and follow accessibility best practices where possible.
 - It wants to do less (we will see if it actually happens).
 
