Update Accessibility page

--- a/src/docs/getting-started/accessibility.mdx
+++ b/src/docs/getting-started/accessibility.mdx
@@ -3,7 +3,9 @@ title: 'Inclusivity and Accessibility'
 order: 5
 ---
 
-<p class="lead">Inclusivity and accessibility (A11Y) are some of the main concerns of Spruce. Our goal is to help you develop a little more accessible web-based projects through our code and the documentation, where we will try to show you small, related tips and guidence where it is possible.</p>
+<p class="lead">Inclusivity and accessibility (A11Y) are some of the main concerns of Spruce CSS. Our goal is to help you develop a little more accessible web-based projects through our code and the documentation, where we will try to show you small, related tips and guidance where necessary.</p>
+
+Building something more inclusive is a long process. We learn on the way, too, so this is especially a work in progress.
 
 ## WCAG 2.1
 
@@ -14,5 +16,5 @@ Our primary reference is the [Web Content Accessibility Guidelines 2.1](https://
 We will meet the following accessibility-related issues:
 
 - The base colors and the base combinations will complete the color contrast guides.
-- We respect the user settings through ```prefers-reduced-motion``` and ```prefers-color-scheme``` (here we still have a little work to do).
-- We care about semantic and will try present the code, examples in a more meaningful way.
+- We respect the user settings through `prefers-reduced-motion` and `prefers-color-scheme` (dark-mode is coming soon).
+- We care about semantics and will try to present the code examples more meaningfully.
